--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "firebase": "3.5.2",
     "ms": "0.7.2",
-    "next": "2.0.0-beta.17",
+    "next": "^2.0.0",
     "nprogress": "^0.2.0",
     "url-parse": "1.1.7"
   },
