--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "firebase": "3.5.2",
+    "firebase": "^3.7.3",
     "ms": "0.7.2",
     "next": "^2.0.0",
     "nprogress": "^0.2.0",
