--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ms": "^1.0.0",
     "next": "^2.0.0",
     "nprogress": "^0.2.0",
-    "url-parse": "1.1.7"
+    "url-parse": "^1.1.8"
   },
   "scripts": {
     "dev": "next",
