--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "ms": "^1.0.0",
     "next": "^2.0.0",
     "nprogress": "^0.2.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "url-parse": "^1.1.8"
   },
   "scripts": {
