--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "firebase": "^3.7.3",
     "ms": "^1.0.0",
-    "next": "^2.0.0",
+    "next": "beta",
     "nprogress": "^0.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
